--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -290,6 +290,15 @@ body {
   box-shadow: 0 0 4px 3px var(--btn-shadow);
 }
 
+.txt-hover {
+  transition: text-shadow 0.3s linear, color 0.3s linear;
+  cursor: pointer;
+}
+.txt-hover:hover {
+  text-shadow: var(--btn-shadow) 0 2px 10px;
+  color: var(--btn-shadow);
+}
+
 /*
 .section-title {
 	color: #1d1d1d;
