--- a/assets/style/_intro.scss
+++ b/assets/style/_intro.scss
@@ -12,7 +12,7 @@
 	&__item {
 		padding: 10rem 1rem 2.5rem;
 		border-radius: .8rem;
-		overflow: hidden;
+		//overflow: hidden;
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center top;
@@ -40,10 +40,8 @@
 		//margin: 0 auto;
 	}
 	&__h {
-		display: none;
-		inset: 0;
-		background-color: red;
-		z-index: 1;
+		inset: -3px;
+		z-index: -1;
 		svg {
 			width: 100%;
 			height: 100%;
@@ -52,11 +50,10 @@
 				height: 100%;
 				fill: transparent;
 				stroke-width: 7px;
-				stroke: black;
-				
-				
-				
-				
+				stroke: var( --btn-shadow);
+				&:not(.hovered) {
+					stroke: none;
+				}
 			}
 		}
 	}
