--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -14,7 +14,8 @@
 		width: 36px;
 		height: 18px;
 		grid-area: menu;
-		
+		opacity: 0;
+		pointer-events: none;
 		span {
 			display: block;
 			left: 0;
