--- a/assets/style/_intro.scss
+++ b/assets/style/_intro.scss
@@ -5,10 +5,12 @@
 		font-size: 1.3rem;
 		margin-bottom: 5rem;
 	}
+	
 	&__items {
 		grid-template-columns: repeat(3, 1fr);
 		grid-gap: 2rem;
 	}
+	
 	&__item {
 		padding: 10rem 1rem 2.5rem;
 		border-radius: .8rem;
@@ -21,40 +23,71 @@
 		max-width: 340px;
 		width: 100%;
 		margin: 0 auto;
+		&:hover {
+			.l-intro__back {
+				img {
+					transform: scale(1.1)
+				}
+			}
+		}
 	}
 	
 	&__item-content {
 		height: 100%;
 	}
+	
 	&__name {
 		padding-bottom: 1rem;
 		font-size: 1.25rem;
 		font-weight: 500;
 	}
+	
 	&__description {
 		font-size: .85rem;
 		margin-bottom: 2rem;
 	}
+	
 	&__btn {
 		//width: max-content;
 		//margin: 0 auto;
 	}
+	
 	&__h {
 		inset: -3px;
 		z-index: -1;
+		
 		svg {
 			width: 100%;
 			height: 100%;
+			
 			rect {
 				width: 100%;
 				height: 100%;
 				fill: transparent;
 				stroke-width: 7px;
-				stroke: var( --btn-shadow);
+				stroke: var(--btn-shadow);
+				
 				&:not(.hovered) {
 					stroke: none;
 				}
 			}
+		}
+	}
+	
+	&__back {
+		inset: 0;
+		z-index: -1;
+		overflow: hidden;
+		border-radius: .8rem;
+		transform-origin: center;
+		
+		
+		img {
+			transition: transform 1s ease-in-out;
+			//transform: scale(1.1);
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
 		}
 	}
 }
