--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -210,6 +210,19 @@ body {
 .content {
   flex: 1 0 auto;
 }
+.content__video {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  opacity: 0.2;
+}
+.content__video video {
+  max-width: 1920px;
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  display: block;
+}
 
 .footer {
   flex: 0 0 auto;
@@ -1018,6 +1031,8 @@ a.no-link {
   width: 36px;
   height: 18px;
   grid-area: menu;
+  opacity: 0;
+  pointer-events: none;
 }
 .header__menu span {
   display: block;
@@ -1090,6 +1105,9 @@ a.no-link {
   width: 100%;
   margin: 0 auto;
 }
+.l-intro__item:hover .l-intro__back img {
+  transform: scale(1.1);
+}
 .l-intro__item-content {
   height: 100%;
 }
@@ -1119,6 +1137,19 @@ a.no-link {
 }
 .l-intro__h svg rect:not(.hovered) {
   stroke: none;
+}
+.l-intro__back {
+  inset: 0;
+  z-index: -1;
+  overflow: hidden;
+  border-radius: 0.8rem;
+  transform-origin: center;
+}
+.l-intro__back img {
+  transition: transform 1s ease-in-out;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .l-experience {
@@ -1172,10 +1203,24 @@ a.no-link {
 }
 .l-experience__icon {
   margin-right: 2rem;
+  transform-origin: center;
+  transition: transform 0.1s linear;
+}
+.l-experience__icon:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+.l-experience__icon:hover .svg-shadow {
+  opacity: 1;
 }
 .l-experience__item-text {
   font-size: 1.6rem;
   font-weight: 500;
+}
+
+.svg-shadow {
+  opacity: 0;
+  transition: opacity 0.3s linear;
 }
 
 .l-form__body {
