--- a/assets/style/_default.scss
+++ b/assets/style/_default.scss
@@ -200,8 +200,9 @@ body {
 		z-index: -1;
 		width: 100%;
 		opacity: .2;
+		overflow: hidden;
 		video {
-			max-width: 1920px;
+			//max-width: 1920px;
 			width: 100%;
 			height: auto;
 			margin: 0 auto;
@@ -296,6 +297,28 @@ body {
 	&:hover{
 		text-shadow: var(--btn-shadow) 0 2px 10px;
 		color:  var(--btn-shadow);
+	}
+}
+
+.stroke-item-hover {
+	inset: -3px;
+	z-index: -1;
+	
+	svg {
+		width: 100%;
+		height: 100%;
+		
+		rect {
+			width: 100%;
+			height: 100%;
+			fill: transparent;
+			stroke-width: 7px;
+			stroke: var(--btn-shadow);
+			
+			&:not(.hovered) {
+				stroke: none;
+			}
+		}
 	}
 }
 
