--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -60,7 +60,15 @@
 		margin: 0 auto;
 		grid-area: logo;
 		
+		&:hover {
+			
+			img {
+				transform: scale(1.05);
+			}
+		}
 		img {
+			transform-origin: center;
+			transition: transform .1s linear;
 			width: 100%;
 			height: 100%;
 			object-fit: contain;
