--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -215,9 +215,9 @@ body {
   z-index: -1;
   width: 100%;
   opacity: 0.2;
+  overflow: hidden;
 }
 .content__video video {
-  max-width: 1920px;
   width: 100%;
   height: auto;
   margin: 0 auto;
@@ -310,6 +310,25 @@ body {
 .txt-hover:hover {
   text-shadow: var(--btn-shadow) 0 2px 10px;
   color: var(--btn-shadow);
+}
+
+.stroke-item-hover {
+  inset: -3px;
+  z-index: -1;
+}
+.stroke-item-hover svg {
+  width: 100%;
+  height: 100%;
+}
+.stroke-item-hover svg rect {
+  width: 100%;
+  height: 100%;
+  fill: transparent;
+  stroke-width: 7px;
+  stroke: var(--btn-shadow);
+}
+.stroke-item-hover svg rect:not(.hovered) {
+  stroke: none;
 }
 
 /*
@@ -1069,7 +1088,12 @@ a.no-link {
   margin: 0 auto;
   grid-area: logo;
 }
+.header__logo:hover img {
+  transform: scale(1.05);
+}
 .header__logo img {
+  transform-origin: center;
+  transition: transform 0.1s linear;
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -1119,24 +1143,6 @@ a.no-link {
 .l-intro__description {
   font-size: 0.85rem;
   margin-bottom: 2rem;
-}
-.l-intro__h {
-  inset: -3px;
-  z-index: -1;
-}
-.l-intro__h svg {
-  width: 100%;
-  height: 100%;
-}
-.l-intro__h svg rect {
-  width: 100%;
-  height: 100%;
-  fill: transparent;
-  stroke-width: 7px;
-  stroke: var(--btn-shadow);
-}
-.l-intro__h svg rect:not(.hovered) {
-  stroke: none;
 }
 .l-intro__back {
   inset: 0;
@@ -1274,7 +1280,6 @@ a.no-link {
 .l-history__item {
   padding: 2rem 2rem 3rem;
   border-radius: 12px;
-  overflow: hidden;
   position: relative;
 }
 .l-history__item::before {
@@ -1284,9 +1289,10 @@ a.no-link {
   z-index: -1;
   background-color: var(--bg-dark);
   transition: opacity 0.2s linear;
+  border-radius: 12px;
 }
 .l-history__item:hover::before {
-  opacity: 0.1;
+  opacity: 0.8;
 }
 .l-history__picture {
   max-width: 10.5rem;
