--- a/assets/style/_default.scss
+++ b/assets/style/_default.scss
@@ -195,11 +195,22 @@ body {
 
 .content {
 	flex: 1 0 auto;
+	position: relative;
+	background-repeat: no-repeat;
+	background-position: center top;
+	background-size: 100% auto;
+	&::before {
+		content: "";
+		background: linear-gradient(to top, var(--gr-light), var(--gr-dark));
+		position: absolute;
+		inset: 0;
+		z-index: -1;
+	}
 	&__video {
 		position: absolute;
 		z-index: -1;
 		width: 100%;
-		opacity: .2;
+		opacity: .05;
 		overflow: hidden;
 		video {
 			//max-width: 1920px;
@@ -208,6 +219,12 @@ body {
 			margin: 0 auto;
 			display: block;
 		}
+	}
+	&__video-filter {
+		position: absolute;
+		inset: 0;
+		background: linear-gradient(to top, var(--gr-light), transparent)
+		//background-color: red;
 	}
 }
 
