--- a/assets/style/_vars.scss
+++ b/assets/style/_vars.scss
@@ -11,7 +11,7 @@
 	 --footer-border: rgba(25, 45, 80, .2);
 	 --bg-dark: #01173e;
 	
-	 //275fa3
+	 //023271
 	 
 	 
 	 --font: 'Rubik', sans-serif;
