--- a/assets/style/_media.scss
+++ b/assets/style/_media.scss
@@ -97,6 +97,14 @@
 			font-size: 1.2rem;
 		}
 	}
+	.modal {
+		&__body {
+			padding: 1.5rem 3rem;
+		}
+		&__input {
+			max-width: none;
+		}
+	}
 }
 @media (max-width: 480px) {
 	.header {
@@ -150,6 +158,14 @@
 		}
 		&__links {
 			flex-basis: auto;
+		}
+	}
+	.modal {
+		&__body {
+			padding: 1.5rem;
+		}
+		&__title {
+			font-size: 1.4rem;
 		}
 	}
 }
