--- a/assets/style/_vars.scss
+++ b/assets/style/_vars.scss
@@ -10,7 +10,8 @@
 	 --experience-border-color: rgba(39, 95, 163, .5);
 	 --footer-border: rgba(25, 45, 80, .2);
 	 --bg-dark: #01173e;
-	
+	 --modal-bg: rgba(2,50,113, 75%);
+	 //--a: #023271;
 	 //023271
 	 
 	 
