--- a/assets/style/_default.scss
+++ b/assets/style/_default.scss
@@ -333,7 +333,7 @@ body {
 	transition: transform .3s ease-in, box-shadow .3s ease-in;
 	&:hover{
 		transform: translate(-.4rem, -.4rem);
-		box-shadow: .4rem .4rem 1rem 0 var(--bg-dark);
+		box-shadow: .4rem .4rem 1rem 0 var(--btn-shadow);
 	}
 	&.l-history__item {
 		&:hover {
