--- a/assets/style/_vars.scss
+++ b/assets/style/_vars.scss
@@ -8,7 +8,8 @@
 	 --item-border: #006cb4;
 	 --form-placeholder-color: #999db0;
 	 --experience-border-color: rgba(39, 95, 163, .5);
-	 --footer-border: rgba(25, 45, 80, .2);
+	 --footer-border: rgba(153, 157, 176, .2);
+	 //--footer-border: rgba(25, 45, 80, .2);
 	 --bg-dark: #01173e;
 	 --modal-bg: rgba(2,50,113, 75%);
 	 //--a: #023271;
