--- a/assets/style/_footer.scss
+++ b/assets/style/_footer.scss
@@ -7,7 +7,8 @@
 	}
 	
 	&__top {
-		border-bottom: 2px solid var(--footer-border);
+		padding-bottom: 0;
+		//border-bottom: 2px solid var(--footer-border);
 	}
 	
 	&__logo {
