minimize footer bottom padding

--- a/assets/style/_footer.scss
+++ b/assets/style/_footer.scss
@@ -10,6 +10,9 @@
 		padding-bottom: 0;
 		//border-bottom: 2px solid var(--footer-border);
 	}
+	&__bottom {
+		padding-bottom: 1.4rem;
+	}
 	
 	&__logo {
 		gap: 1.5rem;
