--- a/assets/style/_vars.scss
+++ b/assets/style/_vars.scss
@@ -2,6 +2,8 @@
 	 --text-color: #fff;
 	 --gr-light: #0363cf;
 	 --gr-dark: #021740;
+	 --item-gr-light: #005ebd;
+	 --item-gr-dark: #020736;
 	 --white: #fff;
 	 --btn-bg: #2067fb;
 	 --btn-shadow: #38b4ff;
