--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -1,88 +1,96 @@
 .header {
-	height: 150px;
-	padding: 1.5rem 0;
-	
-	&__row {
-		grid-template-areas:
+  height: 150px;
+  padding: 1.5rem 0;
+
+  &__row {
+    grid-template-areas:
 			"menu logo actions";
-		grid-template-columns: repeat(3, 1fr);
-		grid-gap: 1rem;
-		align-items: center;
-	}
-	
-	&__menu {
-		width: 36px;
-		height: 18px;
-		grid-area: menu;
-		opacity: 0;
-		pointer-events: none;
-		span {
-			display: block;
-			left: 0;
-			height: 2px;
-			width: 18px;
-			top: 8px;
-			background-color: var(--white);
-			
-			
-			&:first-child {
-				top: 0;
-				width: 100%;
-			}
-			
-			&:last-child {
-				bottom: 0;
-				top: auto;
-				width: 100%;
-			}
-			
-			
-		}
-		
-		&:hover {
-			cursor: pointer;
-			span {
-				animation: menu 0.4s ease-in-out 1;
-				&:first-child {
-					animation-delay: .1s;
-				}
-				
-				&:nth-child(2) {
-					animation-delay: .2s;
-				}
-			}
-		}
-	}
-	
-	&__logo {
-		width: 75px;
-		height: 100px;
-		margin: 0 auto;
-		grid-area: logo;
-		
-		&:hover {
-			
-			img {
-				transform: scale(1.05);
-			}
-		}
-		img {
-			transform-origin: center;
-			transition: transform .1s linear;
-			width: 100%;
-			height: 100%;
-			object-fit: contain;
-		}
-	}
-	
-	&__actions {
-		justify-content: flex-end;
-		gap: 4rem;
-		grid-area: actions;
-	}
-	
-	&__request {
-		text-transform: none;
-	}
-	
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1rem;
+    align-items: center;
+  }
+
+  &__menu {
+    width: 36px;
+    height: 18px;
+    grid-area: menu;
+    opacity: 0;
+    pointer-events: none;
+
+    span {
+      display: block;
+      left: 0;
+      height: 2px;
+      width: 18px;
+      top: 8px;
+      background-color: var(--white);
+
+
+      &:first-child {
+        top: 0;
+        width: 100%;
+      }
+
+      &:last-child {
+        bottom: 0;
+        top: auto;
+        width: 100%;
+      }
+
+
+    }
+
+    &:hover {
+      cursor: pointer;
+
+      span {
+        animation: menu 0.4s ease-in-out 1;
+
+        &:first-child {
+          animation-delay: .1s;
+        }
+
+        &:nth-child(2) {
+          animation-delay: .2s;
+        }
+      }
+    }
+  }
+
+  &__logo {
+    width: 75px;
+    height: 100px;
+    margin: 0 auto;
+    grid-area: logo;
+
+    &:hover {
+
+      img {
+        transform: scale(1.05);
+      }
+    }
+
+    img {
+      transform-origin: center;
+      transition: transform .1s linear;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  }
+
+  &__actions {
+    justify-content: flex-end;
+    gap: 4rem;
+    grid-area: actions;
+  }
+
+  &__request {
+    text-transform: none;
+  }
+
+	&__lang {
+    color: white;
+  }
+
 }
