--- a/assets/style/_intro.scss
+++ b/assets/style/_intro.scss
@@ -70,4 +70,25 @@
 			object-fit: cover;
 		}
 	}
+
+}
+
+.l-intro_en {
+	.l-intro {
+		&__title {
+			font-size: 36px;
+			font-weight: 500;
+		}
+		&__text {
+			text-align: left;
+			margin-top: 30px;
+			font-size: 14px;
+			max-width: 970px;
+			width: 100%;
+			line-height: 1.6;
+			p + p {
+				margin-top: 30px;
+			}
+		}
+	}
 }
