--- a/assets/style/_modal.scss
+++ b/assets/style/_modal.scss
@@ -133,15 +133,31 @@
 .modal-card {
   .modal {
     &__body {
+      background: linear-gradient(to right, var(--item-gr-light), var(--item-gr-dark));
       color: white;
-      padding-top: 355px;
-      background-repeat: no-repeat;
+      //padding-top: 355px;
+      //background-repeat: no-repeat;
       background-size: 105%;
       max-width: 770px;
-      background-position: -10px -10px;
-      background-color: transparent;
+      //background-position: -10px -10px;
+      //background-color: transparent;
       //max-height: 100vh;
       overflow: auto;
+      padding: 0;
+    }
+
+    &__content {
+      padding: 0 6rem 2.5rem;
+    }
+
+    &__picture {
+      max-height: 360px;
+
+      img {
+        display: block;
+        width: 100%;
+        object-fit: contain;
+      }
     }
 
     &__bg {
@@ -149,9 +165,11 @@
       inset: 0;
       overflow: hidden;
       border-radius: 12px;
+
       &::before {
         display: none;
       }
+
       img {
         object-position: center -48px;
         width: 100%;
@@ -174,6 +192,7 @@
       font-size: 14px;
       padding-left: 40px;
       position: relative;
+
       &::before {
         content: "";
         display: inline-block;
