--- a/assets/style/_intro.scss
+++ b/assets/style/_intro.scss
@@ -1,94 +1,110 @@
 .l-intro {
-	&__text {
-		text-align: center;
-		font-weight: 300;
-		font-size: 1.3rem;
-		margin-bottom: 5rem;
-	}
-	
-	&__items {
-		grid-template-columns: repeat(3, 1fr);
-		grid-gap: 2rem;
-	}
-	
-	&__item {
-		padding: 10rem 1rem 2.5rem;
-		border-radius: .8rem;
-		//overflow: hidden;
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position: center top;
-		border: 1px solid var(--item-border);
-		text-align: center;
-		max-width: 340px;
-		width: 100%;
-		margin: 0 auto;
-		&:hover {
-			.l-intro__back {
-				img {
-					transform: scale(1.1)
-				}
-			}
-		}
-	}
-	
-	&__item-content {
-		height: 100%;
-	}
-	
-	&__name {
-		padding-bottom: 1rem;
-		font-size: 1.25rem;
-		font-weight: 500;
-	}
-	
-	&__description {
-		font-size: .85rem;
-		margin-bottom: 2rem;
-	}
-	
-	&__btn {
-		//width: max-content;
-		//margin: 0 auto;
-	}
-	
+  &__text {
+    text-align: center;
+    font-weight: 300;
+    font-size: 1.3rem;
+    margin-bottom: 5rem;
+  }
 
-	
-	&__back {
-		inset: 0;
-		z-index: -1;
-		overflow: hidden;
-		border-radius: .8rem;
-		transform-origin: center;
-		
-		
-		img {
-			transition: transform 1s ease-in-out;
-			//transform: scale(1.1);
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-		}
-	}
+  &__items {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2rem;
+  }
+
+  &__item {
+    padding: 0 0 2.5rem;
+    border-radius: .8rem;
+    background: linear-gradient(to right, #035dbc, #011142);
+    //overflow: hidden;
+    //background-repeat: no-repeat;
+    //background-size: cover;
+    //background-position: center top;
+    border: 1px solid var(--item-border);
+    text-align: center;
+    max-width: 340px;
+    width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+
+    &:hover {
+      .l-intro__back {
+        img {
+          transform: scale(1.1)
+        }
+      }
+    }
+  }
+
+  &__item-content {
+    height: 100%;
+  }
+
+  &__info {
+    flex-grow: 1;
+  }
+
+  &__picture {
+
+  }
+
+  &__name, &__description {
+    padding: 0 1rem;
+  }
+
+  &__name {
+    padding-bottom: 1rem;
+    font-size: 1.25rem;
+    font-weight: 500;
+  }
+
+  &__description {
+    font-size: .85rem;
+    margin-bottom: 2rem;
+  }
+
+  &__btn {
+    //width: max-content;
+    //margin: 0 auto;
+  }
+
+
+  &__back {
+    inset: 0;
+    z-index: -1;
+    overflow: hidden;
+    border-radius: .8rem;
+    transform-origin: center;
+
+
+    img {
+      transition: transform 1s ease-in-out;
+      //transform: scale(1.1);
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 
 }
 
 .l-intro_en {
-	.l-intro {
-		&__title {
-			font-size: 36px;
-			font-weight: 500;
-		}
-		&__text {
-			text-align: left;
-			margin-top: 30px;
-			font-size: 14px;
-			max-width: 970px;
-			width: 100%;
-			line-height: 1.6;
-			p + p {
-				margin-top: 30px;
-			}
-		}
-	}
+  .l-intro {
+    &__title {
+      font-size: 36px;
+      font-weight: 500;
+    }
+
+    &__text {
+      text-align: left;
+      margin-top: 30px;
+      font-size: 14px;
+      max-width: 970px;
+      width: 100%;
+      line-height: 1.6;
+
+      p + p {
+        margin-top: 30px;
+      }
+    }
+  }
 }
