--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1649,7 +1649,7 @@ a.no-link {
 }
 
 .modal-card {
-  overflow: scroll;
+  overflow: auto;
   align-items: flex-start;
   padding-top: 1rem;
   padding-bottom: 1rem;
