add media css for window height

--- a/assets/style/_modal.scss
+++ b/assets/style/_modal.scss
@@ -146,7 +146,7 @@
       //background-position: -10px -10px;
       //background-color: transparent;
       //max-height: 100vh;
-      overflow: auto;
+      //overflow: auto;
       padding: 0;
     }
 
