--- a/assets/style/_media.scss
+++ b/assets/style/_media.scss
@@ -1,261 +1,372 @@
 @media (max-width: 920px) {
-	.l-form {
-		&__body {
-			flex-direction: column;
-			//& > div {
-			//	flex: 0 1 100%;
-			//}
-		}
-		
-	}
-	.l-projects {
-		&__body {
-			flex-direction: column;
-		}
-		&__static {
-			display: flex;
-			justify-content: space-between;
-			flex-basis: auto;
-		}
-		&__actions {
-			margin-top: 0;
-		}
-		&__slider {
-			width: 100%;
-		}
-	}
-	.footer {
-		&__mail {
-			margin-right: 0;
-		}
-	}
-	.modal-card {
-		.modal {
-			&__picture {
-				max-height: 200px;
-				img {
-					object-position: top;
-				}
-			}
-		}
-	}
+  .l-form {
+    &__body {
+      flex-direction: column;
+      //& > div {
+      //	flex: 0 1 100%;
+      //}
+    }
+
+  }
+  .l-projects {
+    &__body {
+      flex-direction: column;
+    }
+
+    &__static {
+      display: flex;
+      justify-content: space-between;
+      flex-basis: auto;
+    }
+
+    &__actions {
+      margin-top: 0;
+    }
+
+    &__slider {
+      width: 100%;
+    }
+  }
+  .footer {
+    &__mail {
+      margin-right: 0;
+    }
+  }
+  .modal-card {
+    .modal {
+      &__picture {
+        max-height: 200px;
+
+        img {
+          object-position: top;
+        }
+      }
+    }
+  }
 }
+
 @media (max-width: 768px) {
-	.container {
-		padding: 0 .5rem;
-	}
-	.section {
-		padding-top: 1.5rem;
-		padding-bottom: 1.5rem;
-	}
-	.header {
-		&__actions {
-			flex-direction: column;
-			gap: 1rem;
-			align-items: flex-end;
-		}
-	}
-	.l-intro {
-		&__text {
-			margin-bottom: 2rem;
-		}
-		&__items {
-			grid-template-columns: repeat(1, 1fr);
-		}
-	}
-	.l-experience {
-		padding-bottom: 0;
-		&__body {
-			flex-wrap: wrap;
-			justify-content: center;
-			padding-bottom: 3rem;
-		}
-		&__stats {
-			max-width: none;
-		}
-		&__item {
-			justify-content: center;
-		}
-	}
-	.l-form {
-		padding-top: 3rem;
-	}
-	.l-history {
-		padding-top: 4rem;
-		padding-bottom: 3rem;
-		&__items {
-			grid-template-columns: repeat(1, 1fr);
-		}
-		&__item {
-			max-width: 370px;
-			width: 100%;
-			margin: 0 auto;
-		}
-	}
-	.l-projects {
-		&__body {
-			padding: 15px 20px;
-		}
-	}
-	.footer {
-		&__top {
-			gap: 1rem
-		}
-		&__logo {
-			flex-basis : auto;
-			flex-direction: column;
-			gap: 1rem;
-		}
-		&__picture {
-			margin-right: 0;
-		}
-		&__contacts {
-			flex-direction: column;
-			align-items: flex-end;
-			gap: 1rem;
-		}
-		&__links {
-			flex-shrink: 1;
-		}
-	}
-	.modal-card {
-		.modal {
-			&__body {
-				max-width: 90%;
-				//padding-top: 2rem;
-				//padding-left: 2rem;
-				//padding-right: 2rem;
-			}
-		&__content {
-			padding: 2rem;
-		}
-			&__bg {
-				&::before {
-					content: "";
-					display: block;
-					position: absolute;
-					inset: 0;
-					background: linear-gradient(45deg, var(--gr-light), var(--gr-dark));
-					opacity: .9;
-				}
-			}
-		}
-	}
+  .container {
+    padding: 0 .5rem;
+  }
+  .section {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+  .header {
+    &__actions {
+      flex-direction: column;
+      gap: 1rem;
+      align-items: flex-end;
+    }
+  }
+  .l-intro {
+    &__text {
+      margin-bottom: 2rem;
+    }
+
+    &__items {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+  .l-experience {
+    padding-bottom: 0;
+
+    &__body {
+      flex-wrap: wrap;
+      justify-content: center;
+      padding-bottom: 3rem;
+    }
+
+    &__stats {
+      max-width: none;
+    }
+
+    &__item {
+      justify-content: center;
+    }
+  }
+  .l-form {
+    padding-top: 3rem;
+  }
+  .l-history {
+    padding-top: 4rem;
+    padding-bottom: 3rem;
+
+    &__items {
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    &__item {
+      max-width: 370px;
+      width: 100%;
+      margin: 0 auto;
+    }
+  }
+  .l-projects {
+    &__body {
+      padding: 15px 20px;
+    }
+  }
+  .footer {
+    &__top {
+      gap: 1rem
+    }
+
+    &__logo {
+      flex-basis: auto;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    &__picture {
+      margin-right: 0;
+    }
+
+    &__contacts {
+      flex-direction: column;
+      align-items: flex-end;
+      gap: 1rem;
+    }
+
+    &__links {
+      flex-shrink: 1;
+    }
+  }
+  .modal-card {
+    .modal {
+      &__body {
+        max-width: 90%;
+        //padding-top: 2rem;
+        //padding-left: 2rem;
+        //padding-right: 2rem;
+      }
+
+      &__content {
+        padding: 2rem;
+      }
+
+      &__bg {
+        &::before {
+          content: "";
+          display: block;
+          position: absolute;
+          inset: 0;
+          background: linear-gradient(45deg, var(--gr-light), var(--gr-dark));
+          opacity: .9;
+        }
+      }
+    }
+  }
 }
+
 @media (max-width: 550px) {
-	.l-experience {
-		&__item {
-			justify-content: start;
-		}
-		&__item-text {
-			font-size: 1.2rem;
-		}
-	}
-	.l-projects-item {
-		&__logo {
-			max-width: 100px;
-		}
-	}
-	.modal {
-		&__body {
-			padding: 1.5rem 3rem;
-		}
-		&__input {
-			max-width: none;
-		}
-	}
-	.modal-card {
-		.modal {
-			&__body {
-				//padding: 3rem 1rem 1rem;
-			}
-			&__content {
-				padding: 1rem;
-			}
-		}
-	}
+  .l-experience {
+    &__item {
+      justify-content: start;
+    }
+
+    &__item-text {
+      font-size: 1.2rem;
+    }
+  }
+  .l-projects-item {
+    &__logo {
+      max-width: 100px;
+    }
+  }
+  .modal {
+    &__body {
+      padding: 1.5rem 3rem;
+    }
+
+    &__input {
+      max-width: none;
+    }
+  }
+  .modal-card {
+    .modal {
+      &__body {
+        //padding: 3rem 1rem 1rem;
+      }
+
+      &__content {
+        padding: 1rem;
+      }
+    }
+  }
 }
+
 @media (max-width: 480px) {
-	.header {
-		&__logo {
-			width: 50px;
-			height: 67px;
-		}
-		
-	}
-	.l-form {
-		&__text {
-			text-align: center;
-		}
-		&__inner {
-			flex-wrap: wrap;
-			gap: 1rem;
-			justify-content: center;
-			//flex-direction: column;
-			//align-items: center;
-			//gap: 1rem;
-		}
-		&__input {
-			margin-right: 0;
-		}
-		&__btn {
-			.btn {
-				padding-top: 1rem;
-				padding-bottom: 1rem;
-			}
-		}
-	}
-	.l-projects {
-		&__title {
-			font-size: 24px;
-		}
-		&__prev, &__next {
-			width: 40px;
-			height: 40px;
-		}
-	}
-	.l-projects-item {
-		&__name {
-			font-size: 22px;
-		}
-		&__logo {
-			display: none;
-		}
-	}
-	.footer {
-		&__top {
-			flex-direction: column;
-			
-		}
-		&__logo {
-			flex-basis : auto;
-			flex-direction: row;
-			gap: 1rem;
-			margin-bottom: 1.5rem;
-		}
-		&__picture {
-			//margin-right: 0;
-		}
-		&__contacts {
-			align-items: center;
-		}
-		&__bottom {
-			flex-direction: column;
-		}
-		&__links {
-			flex-basis: auto;
-		}
-	}
-	.modal {
-		&__body {
-			padding: 1.5rem;
-		}
-		&__title {
-			font-size: 1.4rem;
-			padding-right: 50px;
-		}
-		&__picture {
-			display: none;
-		}
-	}
+  .header {
+    &__logo {
+      width: 50px;
+      height: 67px;
+    }
+
+  }
+  .l-form {
+    &__text {
+      text-align: center;
+    }
+
+    &__inner {
+      flex-wrap: wrap;
+      gap: 1rem;
+      justify-content: center;
+      //flex-direction: column;
+      //align-items: center;
+      //gap: 1rem;
+    }
+
+    &__input {
+      margin-right: 0;
+    }
+
+    &__btn {
+      .btn {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+      }
+    }
+  }
+  .l-projects {
+    &__title {
+      font-size: 24px;
+    }
+
+    &__prev, &__next {
+      width: 40px;
+      height: 40px;
+    }
+  }
+  .l-projects-item {
+    &__name {
+      font-size: 22px;
+    }
+
+    &__logo {
+      display: none;
+    }
+  }
+  .footer {
+    &__top {
+      flex-direction: column;
+
+    }
+
+    &__logo {
+      flex-basis: auto;
+      flex-direction: row;
+      gap: 1rem;
+      margin-bottom: 1.5rem;
+    }
+
+    &__picture {
+      //margin-right: 0;
+    }
+
+    &__contacts {
+      align-items: center;
+    }
+
+    &__bottom {
+      flex-direction: column;
+    }
+
+    &__links {
+      flex-basis: auto;
+    }
+  }
+  .modal {
+    &__body {
+      padding: 1.5rem;
+    }
+
+    &__title {
+      font-size: 1.4rem;
+      padding-right: 50px;
+    }
+
+    &__picture {
+      display: none;
+    }
+  }
+}
+
+@media (max-height: 910px) {
+  .modal-card {
+    padding: 1rem;
+    .modal {
+      &__body {
+        max-width: 500px;
+      }
+
+      &__picture {
+        max-height: 250px;
+      }
+
+
+      &__content {
+        padding: 1rem 2rem 1.5rem;
+
+        ul {
+          li + li {
+            margin-top: 5px;
+          }
+        }
+      }
+
+    }
+  }
+}
+
+@media (max-height: 730px) {
+  .modal-card {
+    .modal {
+      &__title {
+        font-size: 1.3rem;
+      }
+
+      &__picture {
+        max-height: 200px;
+      }
+
+      &__content {
+
+        ul {
+          li {
+            font-size: .8rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-height: 590px) {
+  .modal-card {
+    .modal {
+      &__body {
+        max-width: 400px;
+      }
+      &__title {
+        font-size: 1.3rem;
+      }
+
+      &__picture {
+        max-height: 100px;
+        display: none;
+      }
+
+      &__content {
+        padding: 1rem 2rem;
+        ul {
+          li {
+            font-size: .8rem;
+          }
+        }
+      }
+    }
+  }
 }
