remove overflow for card

--- a/assets/style/_modal.scss
+++ b/assets/style/_modal.scss
@@ -131,7 +131,7 @@
 }
 
 .modal-card {
-  overflow: auto;
+  //overflow: auto;
   align-items: flex-start;
   padding-top: 1rem;
   padding-bottom: 1rem;
